# smartcon

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  deploy.yml  linter.yml  main.yaml
client/: package-lock.json  package.json
client/src/: App.tsx  index.tsx
client/src/pages/: Login.tsx
client/src/redux/: constants.ts
client/src/redux/actions/: app.ts
client/src/redux/reducers/: app.ts  index.ts
client/src/redux/store/: index.ts
client/src/utils/blockchain/: contract.ts  index.ts
client/src/utils/onboard/: contract.ts  index.ts
contracts/: Pokemon.vy
scripts/: token.py
