[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Itay4", email = "etkeren@gmail.com"},
]
dependencies = [
    "eth-brownie~=1.15",
    "vyper~=0.2",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
workflow = [
    "mypy~=0.910",
]
