[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Itay4", email = "etkeren@gmail.com"},
]
dependencies = [
    "eth-brownie==1.17.1",
    "vyper==0.3.0",
]
requires-python = "==3.9.9"
license = {text = "MIT"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
workflow = []
